@@ -2,5 +2,5 @@
 MarkupSafe==0.15
 Jinja2==2.7
 requests==2.2.1
-setuptools==1.1.6
+setuptools==12.0.5
 execnet==1.1
