@@ -33,11 +33,11 @@ pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
 pytest-cov = 1.6
 pytest-timeout = 0.3
-setuptools = 1.1.6
+setuptools = 12.0.5
 six = 1.3.0
 sphinx = 1.1.3
 z3c.recipe.tag = 0.7
-zc.buildout = 2.2.1
+zc.buildout = 2.3.1
 zc.recipe.egg = 2.0.1
 zest.releaser = 3.46
 zope.cachedescriptors = 4.0.0
